# NeuroLog

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  README.md  log_generator.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  docker-image.yml
docs/: log_analysis_paper.md
engine/: docker_gen.py  kubernetes_gen.py  nginx_gen.py  syslog_gen.py
src/: analyzer.py  cli.py  log_generator.py  main.py  patterns.yaml  train_crf.py  utils.py
src/generators/: apache_gen.py  docker_gen.py  kubernetes_gen.py  nginx_gen.py  syslog_gen.py  windows_gen.py
src/models/: crf_model.pkl
src/results/: anomalies.csv
tests/: test_log_analyzer.py
